# Youtube_Downloader

./: .gitignore  LICENSE  README.md  format_display.py  setup.py  youtube-downloader.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
backend/: .gitignore  db.sqlite3  requirements.txt  web.config
backend/src/: settings.py  urls.py
backend/yt_downloader/: models.py  secrets_template.py  urls.py  views.py
backend/yt_downloader/tools/: format_display.py
backend_temp/: download_video.py
frontend/: MANIFEST.in  exe_main.py  exe_spec.spec  pyproject.toml
frontend/youtube_va_downloader/: __init__.py  __main__.py  download_requests.py  download_video.py  format_display.py  search_video.py  secrets_template.py  set_up.py  youtube_downloader.py  youtube_downloader.spec
youtube_downloader/: download_video.py  format_display.py  search_video.py  set_up.py  youtube-downloader.py
